Added implementation to be aligned with tasks in readme.md